<resources>
    <string name="app_name">H+ Alarm</string>
    <string name="title_home">Home</string>
    <string name="title_atras">Atras</string>
    <string name="title_salir">Salir</string>
    <string name="alarmas">Alarmas</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="salir">Salir</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="mis_alarmas">Mis Alarmas</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo">Correo Electrónico</string>
    <string name="confirmar_contraseña">Confirmar Contraseña</string>
    <string name="monitores">Monitores</string>
    <string name="guardar">Guardar</string>
    <string name="misAlarmas">Mis Alarmas</string>
    <string name="nombre">Nombre:</string>
    <string name="estado">Estado</string>
    <string name="acciones">Acciones</string>
    <string name="añadir_alarma">Añadir Alarma</string>
    <string name="monitores_vinculados">Monitores Vinculados</string>
    <string name="añadir_monitor">Añadir Monitor</string>
    <string name="monitores_disponibles">Monitores Disponibles</string>
    <string name="crear_alarma">Crear Alarma</string>
    <string name="hora">Hora:</string>
    <string name="repetir">Repetir:</string>
    <string name="cuantas_veces">¿Cuántas veces?</string>
    <string name="cada_cuanto">¿Cada cuánto?</string>
    <string name="vibracion">Vibración:</string>
    <string name="tono">Tono:</string>
    <string name="crear">Crear</string>
    <string name="dos_puntos">:</string>
    <string name="editar_alarma">Editar Alarma</string>
    <string name="editar">Editar</string>
    <string name="aceptar">Aceptar</string>
    <string name="nueva_notificacion">Tienes una nueva alarma:</string>

</resources>
