<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.hplusalarma.ui.dashboard.DashboardFragment"
        android:label="@string/title_atras"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hplusalarma.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.hplusalarma.ui.salir.SalirFragment"
        android:label="@string/title_salir"
        tools:layout="@layout/fragment_salir" />
</navigation>