<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarmas.AlarmasActivity"
    android:background="@color/white">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navFragmenAnadirtAlarmas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/editar_alarma"
        android:textColor="@color/azul_oscuro"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nombre"
        android:textColor="@color/azul_oscuro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="Penicilina Cama 40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/hora"
        android:textColor="@color/azul_oscuro"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:text="12"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        tools:gravity="center"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        tools:ignore="MissingConstraints"
        tools:visibility="visible"
        tools:gravity="center" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="59dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:text="horas"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/editText8"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:gravity="center"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="59dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:text="Tono 1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/switch5"
        tools:gravity="center"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:text="12"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:gravity="center"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/dos_puntos"
        android:textColor="@color/azul_oscuro"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        tools:ignore="MissingConstraints"
        tools:visibility="visible"
        tools:gravity="center"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:text="am"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toEndOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        tools:ignore="MissingConstraints"
        tools:visibility="visible"
        tools:gravity="center"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/repetir"
        android:textColor="@color/azul_oscuro"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:text="@string/vibracion"
        android:textColor="@color/azul_oscuro"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="24dp"
        android:text="@string/tono"
        android:textColor="@color/azul_oscuro"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="58dp"
        android:layout_height="28dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/switch_border"
        android:padding="8dp"
        android:thumbTint="@drawable/selector_thumb"
        android:trackTint="@drawable/selector_track"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="58dp"
        android:layout_height="28dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/switch_border"
        android:padding="8dp"
        android:thumbTint="@drawable/selector_thumb"
        android:trackTint="@drawable/selector_track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="24dp"
        android:text="@string/cuantas_veces"
        android:textColor="@color/azul_electrico"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:text="@string/cada_cuanto"
        android:textColor="@color/azul_electrico"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/botonCrear"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:onClick="editarAlarma"
        android:text="@string/editar"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/botonCancelar"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/botonCancelar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:onClick="cancelar"
        android:text="@string/cancelar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

</androidx.constraintlayout.widget.ConstraintLayout>